minor fix, with a fullstop

--- a/web/index.html
+++ b/web/index.html
@@ -52,7 +52,7 @@
                 <h2 class='text-white mb-4'>About me!</h2>
                 <p class='text-white'>
                     Who am I?
-                    My name is Lewis and I am an aspiring developer. I started my programming journey with Python,
+                    My name is Lewis, and I am an aspiring developer. I started my programming journey with Python,
                     but have since branched out into other languages and technologies. These days I focus on all things Java.</p>
                 </br>
                 <h2 class='text-white mb-4'>Known Technologies</h2>
