changed location of index.html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Welcome!</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="web/assets/img/favicon.ico"/>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="web/css/styles.css" rel="stylesheet" />
 </head>
 <body id="page-top">
 <!-- Navigation-->
@@ -169,7 +169,7 @@
                         <h4><span style='color:silver'>Rust</span></h4>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/flame.png" alt="" />
+                <img class="img-fluid" src="web/assets/img/flame.png" alt="" />
                 </br>
                 <h2 class="text-white mb-4">This site was built with <Span style='color:darkgreen'>Django</Span> and <Span style='color:darkmagenta'>Bootstrap 4</Span></h2>
                 <p class="text-white-50">
@@ -189,7 +189,7 @@
     <div class="container">
         <!-- Featured Project Row-->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-            <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/djb_cover.jpg" alt="" /></div>
+            <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="web/assets/img/djb_cover.jpg" alt="" /></div>
             <div class="col-xl-4 col-lg-5">
                 <div class="featured-text text-center text-lg-left">
                     <h4>Django Portfolio Page</h4>
@@ -205,8 +205,8 @@
         <!-- Project One Row-->
         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6">
-                <img class="img-fluid" src="assets/img/Sorting-Algorithms.png" alt="" />
-                <img class="img-fluid" src="assets/img/sortAppexample.png" alt="" />
+                <img class="img-fluid" src="web/assets/img/Sorting-Algorithms.png" alt="" />
+                <img class="img-fluid" src="web/assets/img/sortAppexample.png" alt="" />
             </div>
             <div class="col-lg-6 order-lg-first">
                 <div class="bg-black text-center h-100 project">
@@ -229,8 +229,8 @@
         <!-- Project Two Row-->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
             <div class="col-lg-6">
-                <img class="img-fluid" src="assets/img/java_data_app.jpg" alt="" />
-                <img class="img-fluid" src="assets/img/database.png" alt="" />
+                <img class="img-fluid" src="web/assets/img/java_data_app.jpg" alt="" />
+                <img class="img-fluid" src="web/assets/img/database.png" alt="" />
             </div>
             <div class="col-lg-6">
                 <div class="bg-black text-center h-100 project">
@@ -252,8 +252,8 @@
         <!-- Project Three Row -->
         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6">
-                <img class="img-fluid" src="assets/img/tk_cover.png" alt="" />
-                <img class="img-fluid" src="assets/img/all_open.png" alt="" />
+                <img class="img-fluid" src="web/assets/img/tk_cover.png" alt="" />
+                <img class="img-fluid" src="web/assets/img/all_open.png" alt="" />
             </div>
             <div class="col-lg-6 order-lg-first">
                 <div class="bg-black text-center h-100 project">
@@ -276,8 +276,8 @@
         <!-- Project Four Row-->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
             <div class="col-lg-6">
-                <img class="img-fluid" src="assets/img/bt_cover.jpg" alt="" />
-                <img class="img-fluid" src="assets/img/output_graph.png" alt="" />
+                <img class="img-fluid" src="web/assets/img/bt_cover.jpg" alt="" />
+                <img class="img-fluid" src="web/assets/img/output_graph.png" alt="" />
             </div>
             <div class="col-lg-6">
                 <div class="bg-black text-center h-100 project">
@@ -300,8 +300,8 @@
         <!-- Project Five Row-->
         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6">
-                <img class="img-fluid" src="assets/img/pvs_cover.jpg" alt="" />
-                <img class="img-fluid" src="assets/img/codepic.png" alt="" />
+                <img class="img-fluid" src="web/assets/img/pvs_cover.jpg" alt="" />
+                <img class="img-fluid" src="web/assets/img/codepic.png" alt="" />
             </div>
             <div class="col-lg-6 order-lg-first">
                 <div class="bg-black text-center h-100 project">
@@ -324,8 +324,8 @@
         <!-- Project Six Row-->
         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6">
-                <img class="img-fluid" src="assets/img/carpic.jpg" alt="" />
-                <img class="img-fluid" src="assets/img/car_cover.jpg" alt="" />
+                <img class="img-fluid" src="web/assets/img/carpic.jpg" alt="" />
+                <img class="img-fluid" src="web/assets/img/car_cover.jpg" alt="" />
             </div>
             <div class="col-lg-6">
                 <div class="bg-black text-center h-100 project">
@@ -395,6 +395,6 @@
 <!-- Third party plugin JS-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/scripts.js"></script>
+<script src="web/js/scripts.js"></script>
 </body>
 </html>
